--- a/index.html
+++ b/index.html
@@ -108,18 +108,18 @@
             background-size: 100px, auto, auto;
         }
 
-        /* Telegram button styling */
+        /* Telegram button styling (smaller size) */
         .telegram-button {
             display: block;
             margin: 20px auto;
-            padding: 15px 25px;
+            padding: 10px 15px;  /* Smaller padding */
             background-color: #0088cc;
             color: #fff;
             text-align: center;
-            font-size: 18px;
+            font-size: 16px;  /* Smaller font size */
             text-decoration: none;
             border-radius: 5px;
-            width: 200px;
+            width: 160px;  /* Smaller width */
             transition: background-color 0.3s ease;
         }
 
