--- a/index.html
+++ b/index.html
@@ -20,27 +20,6 @@
             background: #000;
             margin: 0;
             padding: 0;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #000;
-        }
-
-        /* Center the video player */
-        .video-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
         }
 
         .loading {
@@ -112,24 +91,35 @@
             0% {
                 filter: blur(0px);
             }
-
             100% {
                 filter: blur(4px);
             }
+        }
+
+        .plyr__video-wrapper::after {
+            position: absolute;
+            top: 15px;
+            left: 15px;
+            z-index: 10;
+            content: '';
+            height: 50px;
+            width: 100px;
+            background: url('') no-repeat;
+            background-size: 100px, auto, auto;
         }
 
         /* Smaller Telegram button styling */
         .telegram-button {
             display: block;
             margin: 20px auto;
-            padding: 6px 10px;
+            padding: 6px 10px;  /* Even smaller padding */
             background-color: #0088cc;
             color: #fff;
             text-align: center;
-            font-size: 14px;
+            font-size: 14px;  /* Even smaller font size */
             text-decoration: none;
             border-radius: 5px;
-            width: 140px;
+            width: 140px;  /* Smaller width */
             transition: background-color 0.3s ease;
         }
 
@@ -139,6 +129,7 @@
     </style>
 </head>
 <body>
+
     <!-- Loading screen -->
     <div class="loading" id="loading">
         <div class="loading-text">
@@ -146,12 +137,10 @@
         </div>
     </div>
 
-    <!-- Centered video player -->
-    <div class="video-container">
-        <video id="player" autoplay controls crossorigin playsinline style="--plyr-color-main:#15b4ff">
-            <source id="m3u8-url" src="" type="application/x-mpegURL">
-        </video>
-    </div>
+    <!-- Video Player -->
+    <video id="player" autoplay controls crossorigin playsinline style="--plyr-color-main:#15b4ff">
+        <source id="m3u8-url" src="" type="application/x-mpegURL">
+    </video>
 
     <!-- Telegram Channel Button -->
     <a href="https://t.me/+lkbpBqFd0FljNzJl" class="telegram-button" target="_blank">
