--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="ENJOY FREE LIVE ">
-    <meta name="keywords" content="JIOTV, LIVETV, SPORTS, MOVIES, MUSIC">
     <meta name="author" content="unknown">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -58,16 +57,17 @@
             font-family: 'Quattrocento Sans', sans-serif;
         }
 
-        /* Position watermark over the video player */
+        /* Position watermark on the right side */
         .watermark {
             position: absolute;
-            bottom: 10px;  /* Distance from the bottom */
-            left: 10px;    /* Distance from the left */
-            font-size: 20px;  /* Small size */
-            color: rgba(255, 255, 255, 0.5); /* White color with transparency */
+            bottom: 5px;  /* Smaller distance from the bottom */
+            right: 5px;   /* Positioning watermark on the right side */
+            font-size: 12px;  /* Small font size */
+            color: rgba(255, 255, 255, 0.3); /* White color with transparency */
             font-style: italic;
             pointer-events: none; /* Prevent interaction with the video */
             z-index: 10; /* Ensure it's above the video */
+            font-family: "Courier New", Courier, monospace; /* Monospace font to match the style */
         }
 
         /* Plyr video wrapper custom styling */
@@ -120,7 +120,7 @@
 
         <!-- Watermark -->
         <div class="watermark">
-            TEAMROHITOFFICIAL45
+            𝙏𝙀𝘼𝙈𝙍𝙊𝙃𝙄𝙏𝙊𝙁𝙁𝙄𝘾𝙄𝘼𝙇𝟰𝟱
         </div>
     </div>
 
