--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="ENJOY FREE LIVE ">
+    <meta name="keywords" content="JIOTV, LIVETV, SPORTS, MOVIES, MUSIC">
     <meta name="author" content="unknown">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -60,10 +61,10 @@
         /* Position watermark on the right side */
         .watermark {
             position: absolute;
-            bottom: 5px;  /* Smaller distance from the bottom */
-            right: 5px;   /* Positioning watermark on the right side */
-            font-size: 12px;  /* Small font size */
-            color: rgba(255, 255, 255, 0.3); /* White color with transparency */
+            bottom: 2px;  /* Even smaller distance from the bottom */
+            right: 2px;   /* Position watermark on the right side */
+            font-size: 8px;  /* Much smaller font size */
+            color: rgba(255, 255, 255, 0.2); /* White color with higher transparency */
             font-style: italic;
             pointer-events: none; /* Prevent interaction with the video */
             z-index: 10; /* Ensure it's above the video */
