--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.5/shaka-player.compiled.js"></script>
   <style>
     body {
-      background: #111;
+      background: #121212;
       color: #fff;
       font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      text-align: center;
     }
     video {
       width: 80%;
@@ -20,68 +18,75 @@
     }
     select {
       margin-top: 10px;
-      padding: 5px;
+      padding: 6px 12px;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
 
-  <h1>IPL Live Match Player</h1>
+  <h1>IPL Match Player</h1>
   <video id="video" controls autoplay></video>
+  <br>
+  <label for="qualitySelect">Choose Quality:</label>
   <select id="qualitySelect"></select>
 
   <script>
     async function initPlayer() {
-      const response = await fetch('https://raw.githubusercontent.com/drmlive/willow-live-events/refs/heads/main/willow.json');
-      const json = await response.json();
-
-      const playbackData = json.playback_data;
-      if (!playbackData || playbackData.length === 0) {
-        alert("No streams available.");
-        return;
-      }
-
-      // Pick the first stream URL (you can customize this logic)
-      const streamUrl = playbackData[0].url;
-
-      const video = document.getElementById('video');
-      const player = new shaka.Player(video);
-
-      player.addEventListener('error', onError);
+      // Use a public CORS proxy for testing (not for production!)
+      const jsonUrl = 'https://cors-anywhere.herokuapp.com/https://raw.githubusercontent.com/drmlive/willow-live-events/refs/heads/main/willow.json';
 
       try {
+        const response = await fetch(jsonUrl);
+        const data = await response.json();
+
+        const playbackData = data.playback_data;
+        if (!playbackData || playbackData.length === 0) {
+          alert("No video streams found in the API.");
+          return;
+        }
+
+        const streamUrl = playbackData[0].url;
+
+        const video = document.getElementById('video');
+        const player = new shaka.Player(video);
+
+        player.addEventListener('error', onError);
+
         await player.load(streamUrl);
-        console.log('The video has now been loaded!');
+        console.log('Loaded:', streamUrl);
+
         setupQualitySelector(player);
-      } catch (e) {
-        onError(e);
+      } catch (err) {
+        onError(err);
       }
     }
 
     function setupQualitySelector(player) {
-      const qualitySelect = document.getElementById('qualitySelect');
-      qualitySelect.innerHTML = ''; // clear existing options
-
+      const select = document.getElementById('qualitySelect');
       const tracks = player.getVariantTracks();
-      tracks.forEach((track, index) => {
+
+      tracks.forEach((track, i) => {
         const option = document.createElement('option');
-        option.value = index;
-        option.text = `${track.height}p (${track.bandwidth / 1000} kbps)`;
-        qualitySelect.appendChild(option);
+        option.value = i;
+        option.text = `${track.height}p (${Math.round(track.bandwidth / 1000)} kbps)`;
+        select.appendChild(option);
       });
 
-      qualitySelect.addEventListener('change', () => {
-        const selectedTrack = tracks[qualitySelect.value];
-        player.configure({ abr: { enabled: false } }); // disable auto
-        player.selectVariantTrack(selectedTrack, /* clearBuffer= */ true);
+      select.addEventListener('change', () => {
+        const chosenTrack = tracks[select.value];
+        player.configure({ abr: { enabled: false } });
+        player.selectVariantTrack(chosenTrack, /* clearBuffer= */ true);
       });
     }
 
     function onError(error) {
-      console.error('Error code', error.code, 'object', error);
+      console.error("Shaka Error:", error);
+      alert("Error loading video. Check console for details.");
     }
 
     document.addEventListener('DOMContentLoaded', initPlayer);
   </script>
+
 </body>
 </html>
